[workspace]
members = [
    "p00-smoke-test",
    "p01-prime-time",
    "p02-means-to-an-end",
    "p03-budget-chat",
    "p04-unusual-database-program",
    "p05-mob-in-the-middle",
    "p06-speed-daemon",
    "p07-line-reversal",
    "p08-insecure-sockets-layer",
    "p09-job-centre",
    "p10-voracious-code-storage",
    "p11-pest-control",
]
resolver = "2"

[workspace.package]
authors = ["Claudio Vesco"]
description = "protohackers tasks"
edition = "2021"
license = "MIT"

[workspace.dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "time", "net", "io-util", "sync"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.15"
bytes = "1"
clap = { version = "4.5.3", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "alloc", "env-filter", "fmt", "registry", "local-time", "tracing-log"] }
anyhow = "1.0.80"
thiserror = "1.0.58"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"

[workspace.lints.clippy]
pedantic = "deny"
