[workspace]
members = [
    "problems/p00-smoke-test",
    "problems/p01-prime-time",
    "problems/p02-means-to-an-end",
    "problems/p03-budget-chat", "problems/p04-unusual-database-program",
]
resolver = "2"

[workspace.package]
authors = ["Claudio Vesco"]
description = "protohackets tasks (Rust WASI)"
edition = "2021"

[workspace.dependencies]
futures = "0.3.30"
futures-concurrency = "7.6.0"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
wasi = "0.13"
wasi-async-runtime = { path = "crates/wasi-async-runtime" }
wasi-async = { path = "crates/wasi-async" }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "alloc", "env-filter", "fmt", "registry", "local-time", "tracing-log"] }
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.80"
slab = "0.4.9"
hashbrown = "0.14.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
bytes = "1.6.0"
primes = "0.3.0"

[workspace.lints.clippy]
pedantic = "deny"
