[package]
name = "budget-chat"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
futures = "0.3.30"

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
