[package]
name = "p03-budget-chat"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }

tokio = { workspace = true, features = ["sync"] }

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[lints]
workspace = true
