[package]
name = "p04-unusual-database-program"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
bin = ["dep:clap", "dep:anyhow", "dep:tracing-subscriber"]

[[bin]]
name = "p04-unusual-database-program"
required-features = ["bin"]

[dependencies]
tokio.workspace = true
tracing.workspace = true

anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
