[package]
name = "p05-mob-in-the-middle"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
p03-budget-chat = { path = "../p03-budget-chat" }

[lints]
workspace = true