[package]
name = "p06-speed-daemon"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true

[lints]
workspace = true
