[package]
name = "p08-insecure-sockets-layer"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
bin = ["dep:clap", "dep:tracing-subscriber", "dep:anyhow", "dep:parking_lot"]

[[bin]]
name = "p08-insecure-sockets-layer"
required-features = ["bin"]

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
bytes.workspace = true

clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
