[package]
name = "p10-voracious-code-storage"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[features]
bin = ["dep:clap", "dep:tracing-subscriber", "dep:anyhow"]

[[bin]]
name = "p10-voracious-code-storage"
required-features = ["bin"]

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace =  true
parking_lot.workspace = true

clap = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
