[package]
name = "prime-time"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

primes = "0.3.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
