[package]
name = "p01-prime-time"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
wit-bindgen-rt.workspace = true
wasi.workspace = true
wasi-async-runtime.workspace = true
wasi-async.workspace = true
thiserror.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
primes.workspace = true

[package.metadata.component]
package = "component:p01-prime-time"

[package.metadata.component.dependencies]

[lints]
workspace = true
