[package]
name = "p03-budget-chat"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
wit-bindgen-rt.workspace = true
wasi.workspace = true
wasi-async-runtime.workspace = true
wasi-async.workspace = true
thiserror.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true

[package.metadata.component]
package = "component:p03-budget-chat"

[package.metadata.component.dependencies]

[lints]
workspace = true
