[package]
name = "p04-unusual-database-program"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wit-bindgen-rt.workspace = true
wasi.workspace = true
wasi-async-runtime.workspace = true
wasi-async.workspace = true
thiserror.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[package.metadata.component]
package = "component:p04-unusual-database-program"

[package.metadata.component.dependencies]

[lints]
workspace = true
